style(main-content): prevent grid rows from stretching

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -21,6 +21,7 @@ body {
     grid-template-columns: 1fr clamp(280px, 30%, 472px);
     gap: clamp(1.875rem, 4vw, 3.875rem) clamp(1rem, 2vw, 1.875rem);
     padding: clamp(16px, 2vw, 30px) clamp(16px, 2vw, 30px) clamp(30px, 4vw, 66px) 0;
+    align-content: start;
 }
 
 .home-slider {
